fix credits: media temple link's visibility

--- a/views/css/footer.styl
+++ b/views/css/footer.styl
@@ -44,5 +44,8 @@
 		background-size: auto 16px;
 		color: #dedfdf;
 		font-size: 0.85em;
-		font-weight: 600;
+		font-weight: 300;
 		padding-left: 46px;
+		&:active,
+		&:focus
+			color: #dedfdf !important;
